# django-portfolio

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .python_history  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  gfw_datasets.json  implementation_plan.md  manage.py  push_ecr.sh  pyproject.toml  run_terraform.sh  setup.cfg  test_gfw.py  walkthrough.md
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
apps/: __init__.py
apps/air_quality/: __init__.py  admin.py  apps.py  models.py  serializers.py  viewsets.py
apps/air_quality/migrations/: 0001_initial.py  0002_rename_aq_aqi_obs_idx_air_quality_aqi_960338_idx_and_more.py  0003_backfill_location_from_lat_lon.py
apps/analysis/: admin.py  models.py  serializers.py  services.py  tests.py  views.py  viewsets.py
apps/analysis/features/: air_quality_features.py  base.py  heat_wave_features.py  hurricane_features.py  pipeline.py  severe_weather_features.py  storm_helpers.py  tornado_features.py  wildfire_features.py
apps/analysis/migrations/: 0001_initial.py
apps/analysis/ml/: air_quality_predictor.py  base.py  explainability.py  heat_wave.py  hurricane.py  registry.py  severe_weather_predictor.py  tornado.py  wildfire_predictor.py
apps/analysis/tests/: test_api.py  test_features.py  test_models.py  test_predictors.py  test_tasks.py
apps/api/: admin.py  exceptions.py  middleware.py  pagination.py  permissions.py  renderers.py  test_exceptions_and_permissions.py  tests.py  throttling.py  views.py
apps/core/: __init__.py  admin.py  apps.py  exceptions.py  models.py  test_exceptions.py  views.py
apps/core/migrations/: 0001_initial.py
apps/core/tests/: __init__.py  test_models.py  test_views.py
apps/deforestation/: admin.py  apps.py  filters.py  models.py  serializers.py  tests.py  views.py  viewsets.py
apps/deforestation/migrations/: 0001_initial.py
apps/geodata/: __init__.py  admin.py  apps.py  filters.py  models.py  serializers.py  tasks.py  viewsets.py
apps/geodata/migrations/: 0001_initial.py  0002_alter_county_area_sq_km_alter_state_area_sq_km.py  0003_county_simplified_geometry.py
apps/geodata/tests/: test_api.py
apps/ingest/: admin.py  models.py  test_airnow_client.py  tests.py  views.py
apps/ingest/clients/: airnow_client.py  base.py  gfw_client.py  noaa_client.py
apps/storms/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py  viewsets.py
apps/weather/: admin.py  models.py  serializers.py  tests.py  views.py  viewsets.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  local.py  production.py
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
logs/: .gitkeep
requirements/: base.txt  local.txt  ml.txt  production.txt
scripts/: entrypoint.sh  generate_gfw_api_key.py  get_gfw_token.py  manage_gfw_api_keys.py
terraform/: alb.tf  ecs.tf  elasticache.tf  frontend.tf  iam.tf  outputs.tf  providers.tf  rds.tf  route53.tf  s3.tf  security_groups.tf  variables.tf  vpc.tf
terraform/bootstrap/: main.tf
(+26 files in other folders)
