# =============================================================================
# ArborWatch — Project Configuration
# =============================================================================

[project]
name = "arborwatch"
version = "1.0.0"
description = "US Deforestation & Severe Weather Tracking Platform"
requires-python = ">=3.12"

# =============================================================================
# Black (Code Formatter)
# =============================================================================

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | migrations
  | staticfiles
  | __pycache__
)/
'''

# =============================================================================
# isort (Import Sorting)
# =============================================================================

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_django = ["django", "rest_framework"]
known_celery = ["celery"]
known_first_party = ["apps", "config"]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "DJANGO",
    "CELERY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
skip_glob = ["*/migrations/*"]

# =============================================================================
# pytest
# =============================================================================

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["apps"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]

# =============================================================================
# mypy (Type Checking)
# =============================================================================

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

[tool.django-stubs]
django_settings_module = "config.settings.local"

# =============================================================================
# Coverage
# =============================================================================

[tool.coverage.run]
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/management/commands/*",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if settings.DEBUG",
    "raise NotImplementedError",
    "pass",
    "except ImportError",
]
